1. s3协议完善，完善下载功能，完善桶相关功能